fixed overflowing of text

--- a/to-do/src/components/TodoListItem/todo-list-item.css
+++ b/to-do/src/components/TodoListItem/todo-list-item.css
@@ -10,6 +10,7 @@
 .todo-list-item-label {
     margin-left: 1.25rem;
     line-height: 35px;
+    word-break: break-word;
     cursor: pointer;
     user-select: none;
 }
